infra/k8s/expiration-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration
  namespace: udemy-course
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expiration
  template:
    metadata: 
      labels:
        app: expiration
    spec:
      containers:
        - name: expiration
          image:  imtejesh95/expiration:latest
