infra/k8s/auth-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  namespace: gittix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata: 
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image:  imtejesh95/auth:latest
---
apiVersion: v1
kind: Service
metadata:
  name: auth-svc
  namespace: gittix
spec:
  selector:
    app: auth
  ports:
    - name: auth
      protocol: TCP
      port: 3000
      targetPort: 3000
