infra/k8s/auth-mongo-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mongo-deploy
spec:
  selector:
    matchLabels:
      app: auth-mongo
  template:
    metadata:
      labels:
        app: auth-mongo
    spec:
      containers:
      - name: auth-mongo
        imagePullPolicy: IfNotPresent
        image: mongo
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: auth-mongo-svc
spec:
  selector:
    app: auth-mongo
  ports:
  - port: 27017 
    targetPort: 27017
