infra/k8s/client-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-ui
  namespace: udemy-course
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client-ui
          image: imtejesh95/react-client-app
---
apiVersion: v1
kind: Service
metadata: 
  name: client-ui-svc
  namespace: udemy-course
spec:
  selector:
    app: client
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
