infra/k8s/orders-mongo-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-mongo
  namespace: udemy-course
spec:
  selector:
    matchLabels:
      app: orders-mongo
  template:
    metadata:
      labels:
        app: orders-mongo
    spec:
      containers:
      - name: orders-mongo
        imagePullPolicy: IfNotPresent
        image: mongo
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: orders-mongo-svc
  namespace: udemy-course
spec:
  selector:
    app: orders-mongo
  ports:
  - port: 27017 
    targetPort: 27017
