infra/k8s/payments-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments
  namespace: gittix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments
  template:
    metadata: 
      labels:
        app: payments
    spec:
      containers:
        - name: payments
          image:  imtejesh95/payments:latest
---
apiVersion: v1
kind: Service
metadata:
  name: payments-svc
  namespace: gittix
spec:
  selector:
    app: payments
  ports:
    - name: payments
      protocol: TCP
      port: 3000
      targetPort: 3000
