infra/k8s/payments-mongo-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-mongo
  namespace: gittix
spec:
  selector:
    matchLabels:
      app: payments-mongo
  template:
    metadata:
      labels:
        app: payments-mongo
    spec:
      containers:
      - name: payments-mongo
        imagePullPolicy: IfNotPresent
        image: mongo
        # resources:
        #   limits:
        #     memory: "128Mi"
        #     cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: payments-mongo-svc
  namespace: gittix
spec:
  selector:
    app: payments-mongo
  ports:
  - port: 27017 
    targetPort: 27017
