infra/k8s/tickets-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets
  namespace: udemy-course
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tickets
  template:
    metadata: 
      labels:
        app: tickets
    spec:
      containers:
        - name: tickets
          image:  imtejesh95/tickets:latest
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-svc
  namespace: udemy-course
spec:
  selector:
    app: tickets
  ports:
    - name: tickets
      protocol: TCP
      port: 3000
      targetPort: 3000
