infra/k8s/tickets-mongo-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-mongo
  namespace: gittix
spec:
  selector:
    matchLabels:
      app: tickets-mongo
  template:
    metadata:
      labels:
        app: tickets-mongo
    spec:
      containers:
      - name: tickets-mongo
        imagePullPolicy: IfNotPresent
        image: mongo
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-mongo-svc
  namespace: gittix
spec:
  selector:
    app: tickets-mongo
  ports:
  - port: 27017 
    targetPort: 27017
